--- a/ACMA.Repository/ACMA.Repository.csproj
+++ b/ACMA.Repository/ACMA.Repository.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\201512241130027_Alter_Table_AccessProfile.Designer.cs">
       <DependentUpon>201512241130027_Alter_Table_AccessProfile.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601071139300_Alter_Table_User_Password_Size.cs" />
+    <Compile Include="Migrations\201601071139300_Alter_Table_User_Password_Size.Designer.cs">
+      <DependentUpon>201601071139300_Alter_Table_User_Password_Size.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccessRepository.cs" />
@@ -123,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512241130027_Alter_Table_AccessProfile.resx">
       <DependentUpon>201512241130027_Alter_Table_AccessProfile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601071139300_Alter_Table_User_Password_Size.resx">
+      <DependentUpon>201601071139300_Alter_Table_User_Password_Size.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
