--- a/ACMA/ACMA.csproj
+++ b/ACMA/ACMA.csproj
@@ -151,6 +151,10 @@
     <Compile Include="Utilities\JsonResponse.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-switch\bootstrap2\bootstrap-switch.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap2\bootstrap-switch.min.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap3\bootstrap-switch.css" />
+    <Content Include="Content\bootstrap-switch\bootstrap3\bootstrap-switch.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -466,6 +470,8 @@
     <Content Include="packages\WebGrease.1.3.0\lib\WebGrease.dll" />
     <Content Include="packages\WebGrease.1.3.0\tools\WG.exe" />
     <Content Include="Scripts\Authorize\Login.js" />
+    <Content Include="Scripts\bootstrap-switch.js" />
+    <Content Include="Scripts\bootstrap-switch.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\chosen.jquery.js" />
@@ -495,6 +501,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\Plugins\dev-app.js" />
     <Content Include="Scripts\Plugins\dev-layout-default.js" />
     <Content Include="Scripts\Plugins\dev-loaders.js" />
