--- a/ACMA/Web.config
+++ b/ACMA/Web.config
@@ -104,4 +104,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <!-- In case IIS already has this mime type -->
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+    </staticContent>
+  </system.webServer>
 </configuration>
