--- a/ACMA/ACMA.csproj
+++ b/ACMA/ACMA.csproj
@@ -514,7 +514,9 @@
     <Content Include="Scripts\User\RegisterUser.js" />
     <Content Include="Scripts\User\UpdateUser.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
