--- a/ACMA/ACMA.csproj
+++ b/ACMA/ACMA.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filters\NoDirectUrlAccess.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
